# CLION-Test

./: CMakeLists.txt  SDL_utils.cpp  SDL_utils.h  main.cpp
